--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<html>
-    <head>
-        Pagina de Inicio
-    </head>
-    <body>
-        <h1>Hola mundo</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hola Mundo</title>
+</head>
+<body>
+    <h1>Hola Mundo</h1>
+</body>
 </html>
