--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saludo</title>
+    <title>Tarjeta de Presentación</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hola Fernando</h1>
-    <h1>Prueba de sitio GitHub Free</h1>
+    <div class="card">
+        <div class="card-header">
+            <img src="https://via.placeholder.com/100" alt="Foto de Perfil">
+        </div>
+        <div class="card-body">
+            <h1>Juanito Jr.</h1>
+            <p>Desarrollador Web</p>
+            <p><a href="mailto:juanito@example.com">juanito@example.com</a></p>
+            <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p>
+        </div>
+        <div class="card-footer">
+            <p>&copy; 2025 Juanito Jr.</p>
+        </div>
+    </div>
 </body>
 </html>
