--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+--><!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -12,13 +12,13 @@
             <img src="https://via.placeholder.com/100" alt="Foto de Perfil">
         </div>
         <div class="card-body">
-            <h1>Juanito Jr.</h1>
+            <h1>FERNANDO RECALDE.</h1>
             <p>Desarrollador Web</p>
-            <p><a href="mailto:juanito@example.com">juanito@example.com</a></p>
-            <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p>
+            <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
+           <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p>-->
         </div>
         <div class="card-footer">
-            <p>&copy; 2025 Juanito Jr.</p>
+            <p>&copy; 2025 FERNANDO RECALDE.</p>
         </div>
     </div>
 </body>
