--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="card">
         <div class="card-header">
-            <img src="https://via.placeholder.com/100" alt="Foto de Perfil">
+            <img src="https://github.com/tpresentacionfr/TarjetaFernando.github.io/blob/main/fotoavatarfr.jpg?raw=true" alt="Foto de Perfil">
         </div>
         <div class="card-body">
             <h1>FERNANDO RECALDE.</h1>
             <p>Desarrollador Web</p>
             <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
-           <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p>-->
+           <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
         </div>
         <div class="card-footer">
             <p>&copy; 2025 FERNANDO RECALDE.</p>
