--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <div class="card-header">
-            <img src="https://github.com/tpresentacionfr/TarjetaFernando.github.io/blob/main/fotoavatarfr.jpg" alt="Foto de Perfil">
+            <img src="https://github.com/tpresentacionfr/TarjetaFernando.github.io/blob/main/fotoavatarfr.jpg?raw=true" alt="Foto de Perfil">
         </div>
         <div class="card-body">
             <h1>FERNANDO RECALDE.</h1>
