--- a/index.html
+++ b/index.html
@@ -21,5 +21,19 @@
             <p>&copy; 2025 FERNANDO RECALDE.</p>
         </div>
     </div>
+    <div class="card">
+        <div class="card-header">
+            <img src="https://github.com/tpresentacionfr/TarjetaFernando.github.io/blob/main/fotoavatarfr.jpg?raw=true" alt="Foto de Perfil">
+        </div>
+        <div class="card-body">
+            <h1>FERNANDO RECALDE.</h1>
+            <p>Desarrollador Web</p>
+            <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
+           <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
+        </div>
+        <div class="card-footer">
+            <p>&copy; 2025 FERNANDO RECALDE.</p>
+        </div>
+    </div>
 </body>
 </html>
