--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
             <p>Desarrollador Web</p>
             <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
            <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
-        </div>
-        <div class="card-body">
-            <h1>FERNANDO RECALDE.</h1>
-            <p>Desarrollador Web</p>
-            <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
-           <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
-        </div>
-        <div class="card-footer">
+                <h1>REALIZAMOS TRABAJOS</h1>
+            <p>CABLEADO ESTRUCTURADO</p>
+            <p>DISE;O GRAFICO</p>
+          <div class="card-footer">
             <p>&copy; 2025 FERNANDO RECALDE.</p>
         </div>
     </div>
