--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
                 <h1>REALIZAMOS TRABAJOS</h1>
             <p>CABLEADO ESTRUCTURADO</p>
-            <p>DISE;O GRAFICO</p>
+            <p>DISEÑO GRAFICO</p>
           <div class="card-footer">
             <p>&copy; 2025 FERNANDO RECALDE.</p>
         </div>
