--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
             <p>Desarrollador Web</p>
             <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
            <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
-           div class="card-footer">     
+           <div class="card-footer">     
            <h1>REALIZAMOS TRABAJOS</h1>
+           </div>
             <p>CABLEADO ESTRUCTURADO</p>
             <p>DISEÑO GRAFICO</p>
-        </div>
+        
           <div class="card-footer">
             <p>&copy; 2025 FERNANDO RECALDE.</p>
         </div>
