--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>DISEÑO GRAFICO</p>
             
             <a href="https://wa.me/34612345678?text=Hola,%20me%20interesa%20tu%20servicio" target="_blank">
-                <button>Enviar mensaje por WhatsApp</button>
+                <button class="WhatsApp-btn">Enviar mensaje por WhatsApp</button>
             </a>
             
           <div class="card-footer">
