--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
      <a href="https://wa.me/34612345678?text=Hola,%20me%20interesa%20tu%20servicio" target="_blank">
         <button class="whatsapp-btn">Enviar mensaje por WhatsApp</button>
     </a>
-          <!--<div class="card-footer">-->
+          <div class="card-footer">
            <p>&copy; 2025 FERNANDO RECALDE.</p>
-        <!-- </div> -->
+      </div>
     </div>
      
     
