--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="https://github.com/tpresentacionfr/TarjetaFernando.github.io/blob/main/fotoavatarfr.jpg?raw=true" alt="Foto de Perfil">
         </div>
         <div class="card-body">
-            <h1>FERNANDO RECALDE.</h1>
+            <h1>FERNANDO RECALDE</h1>
             <p>Desarrollador Web</p>
             <p><a href="mailto:fdrs2127@gmail.com">fdrs2127@gmail.com</a></p>
            <!-- <p><a href="https://github.com/juanitojr" target="_blank">GitHub</a></p> -->
@@ -26,7 +26,7 @@
         <button class="whatsapp-btn">Enviar mensaje por WhatsApp</button>
     </a>
           <div class="card-footer">
-           <p>&copy; 2025 FERNANDO RECALDE.</p>
+           <p>&copy; 2025 Fernando Recalde.</p>
       </div>
     </div>
      
